gahbage/tracing.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zipkin
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          resources:
            requests:
              memory: "256Mi" # Request 256 MiB of memory by default
              cpu: "250m" # Request 0.25 CPU by default
            limits:
              memory: "512Mi" # Limit memory to 512 MiB
              cpu: "500m" # Limit CPU to 0.5 CPU
          ports:
            - name: web
              containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  ports:
    - name: web
      port: 9411
      targetPort: web
  selector:
    app: zipkin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
spec:
  rules:
    - http:
        paths:
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  name: web
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: otelcollector
  labels:
    app: otelcollector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otelcollector
  template:
    metadata:
      labels:
        app: otelcollector
    spec:
      containers:
        - name: otelcollector
          image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector:0.94.0
          resources:
            requests:
              memory: "256Mi" # Request 256 MiB of memory by default
              cpu: "250m" # Request 0.25 CPU by default
            limits:
              memory: "512Mi" # Limit memory to 512 MiB
              cpu: "500m" # Limit CPU to 0.5 CPU
          command:
            - "/otelcol"
            - "--config=/conf/config.yaml"
          volumeMounts:
            - name: config
              mountPath: /conf/
          ports:
            - name: receiver
              containerPort: 4317
      volumes:
        - name: config
          configMap:
            name: otelcollector-config
---
apiVersion: v1
kind: Service
metadata:
  name: otelcollector
spec:
  ports:
    - name: receiver
      port: 4317
      targetPort: receiver
  selector:
    app: otelcollector
